<resources>
    <string name="app_name">ShivShaktiHonda</string>
    <string name="msg_internet_unavailable_msg">Please check your internet connection and try again.</string>
    <string name="msg_networkerror">A server error has occurred and the requested action could not be completed at this time. Please try again after some time.</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">CANCEL</string>
    <string name="common_close">Close</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_done">Done</string>
    <string name="common_not_done">Not done</string>
    <string name="common_save">Save</string>
    <string name="common_download">Download</string>
    <string name="common_edit">Edit</string>
    <string name="common_email">EMail</string>
    <string name="common_delete">Delete</string>
    <string name="common_update">Update</string>
    <string name="splash_app_name">Shiv Shakti Honda</string>
    <string name="login_username_hint">Enter User Name</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_btn">Sign In</string>
    <string name="title_activity_view_dashboard">ViewDashboard</string>
    <string name="change_password_title">Change Password</string>
    <string name="oldpassword_hint">Enter Old Password</string>
    <string name="newpassword_hint">Enter New Password</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="admin_dashboard_screen_title">Admin Dashboard</string>
    <string name="person_report_screen_title">Monthly Report</string>
    <string name="dashboard_screen_title">Dashboard</string>
    <string name="str_incentive">Incentive : </string>
    <string name="str_inquiry">Inquiry : </string>
    <string name="str_booking">Booking : </string>
    <string name="str_delivery">Delivery : </string>
    <string name="summary_detail_title">Summary Detail</string>
    <string name="sd_inquiry">Total Inquiry: </string>
    <string name="sd_booking">Total Booking: </string>
    <string name="sd_delivery">Total Delivery: </string>
    <string name="sd_collection">Total Collection: </string>
    <string name="inquiry_list_screen_title">Inquiries</string>
    <string name="booking_list_screen_title">Bookings</string>
    <string name="delivery_list_screen_title">Deliveries</string>
    <string name="Inquiry_form_screen_title">Inquiry Form</string>
    <string name="Inquiry_name">Name</string>
    <string name="Inquiry_first_name">First Name</string>
    <string name="Inquiry_last_name">last Name</string>
    <string name="Inquiry_middle_name">Middle Name</string>
    <string name="Inquiry_mobile_no">Mobile Number</string>
    <string name="Inquiry_address">Address</string>
    <string name="Inquiry_tahsil">Tahsil</string>
    <string name="Inquiry_distict">Distict</string>
    <string name="Inquiry_vehicle_type">Vehicle Type</string>
    <string name="Inquiry_test_drive">Test drive?</string>
    <string name="Inquiry_vehicle_type_sc">SC</string>
    <string name="Inquiry_vehicle_type_mc">MC</string>
    <string name="Inquiry_model_title">Model</string>
    <string name="Inquiry_variant_title">Variant</string>
    <string name="Inquiry_color_title">colour</string>
    <string name="Inquiry_type_title">Inquiry Title</string>
    <string name="Inquiry_type_demo_van">Demo Van</string>
    <string name="Inquiry_type_news">News</string>
    <string name="Inquiry_type_refernce">Reference</string>
    <string name="Inquiry_type_walk_in">Walk In</string>
    <string name="Inquiry_customer_type_title">Customer Type</string>
    <string name="Inquiry_customer_type_hot">Hot</string>
    <string name="Inquiry_customer_type_cold">Cold</string>
    <string name="Inquiry_customer_type_warm">Warm</string>
    <string name="Inquiry_purchase_type_title">Purchase Type</string>
    <string name="Inquiry_purchase_type_cash">Cash</string>
    <string name="Inquiry_purchase_type_finance">Finance</string>
    <string name="Inquiry_purchase_type_exchange">Exchange</string>
    <string name="Inquiry_purchase_type_other">Other</string>
    <string name="Inquiry_feedback_title">Feedback</string>
    <string name="Inquiry_save_btn">Save</string>
    <string name="Inquiry_book_btn">Book</string>
    <string name="Inquiry_detail_screen_title">Inquiry Detail</string>
    <string name="Inquiry_detail_type">Type :</string>
    <string name="Inquiry_detail_model">Model :</string>
    <string name="Inquiry_detail_variant">Variant :</string>
    <string name="Inquiry_detail_color">Colour :</string>
    <string name="Inquiry_detail_inquiry_title">Inquiry Title :</string>
    <string name="Inquiry_detail_customer_type">Customer Type :</string>
    <string name="Inquiry_detail_purchase_type">Purchase Type :</string>
    <string name="booking_form_screen_title">Booking Form</string>
    <string name="booking_form_customer_name">Customer Name:</string>
    <string name="booking_form_customer_mobile">Customer Mobile:</string>
    <string name="booking_form_model_name">Model Name:</string>
    <string name="booking_form_id">Booking Id</string>
    <string name="booking_form_amount">Amount</string>
    <string name="booking_form_delivery_date">Delivery Date</string>
    <string name="booking_form_select_date">Select Date</string>
    <string name="booking_form_payment">Payment</string>
    <string name="booking_form_delivery_btn">Delivery</string>
    <string name="booking_form_incentive_que_title">Incentive Questions:</string>
    <string name="booking_form_incentive_ex_showroom">Do you Want include Ex-Showroom?</string>
    <string name="booking_form_incentive_insurance">Do you want Insurance?</string>
    <string name="booking_form_incentive_rto">Do you want Rto?</string>
    <string name="booking_form_incentive_amc">Do you want Amc?</string>
    <string name="booking_form_incentive_extra_warranty">Do you want Extra Warranty?</string>
    <string name="booking_form_incentive_mpp">Do you want 3m?</string>
    <string name="booking_form_incentive_acc">Do you want Acc?</string>
    <string name="booking_detail_title">Booking Detail</string>
    <string name="booking_detail_id">Booking Id :</string>
    <string name="booking_detail_delivery_date">Delivery Date :</string>
    <string name="booking_detail_amount">Booking Amount :</string>
    <string name="booking_detail_payment_type">Payment Type </string>
    <string name="delivery_detail_title">Delivery Detail</string>
    <string name="form_cash">Cash</string>
    <string name="form_chq">CHQ</string>
    <string name="form_finance">Finance</string>
    <string name="form_exchange">Exchange</string>
    <string name="form_paytm">Paytm</string>
    <string name="form_other">Other</string>
    <string name="delivery_form_screen_title">Delivery Form</string>
    <string name="delivery_form_engine_number">Engine Number</string>
    <string name="delivery_form_chesis_number">Chesis Number</string>
    <string name="delivery_form_battery_number">Battery Number</string>
    <string name="delivery_form_key_number">Key Number</string>
    <string name="delivery_form_dc_number">DC Number</string>
    <string name="delivery_form_price_title">Price</string>
    <string name="delivery_form_price_total">Total</string>
    <string name="delivery_form_price_booking_amount">Booking Amount</string>
    <string name="delivery_form_price_remaining_amount">Remaining Amount</string>
    <string name="delivery_form_price_discount">Discount</string>
    <string name="delivery_form_price_difference">Difference</string>
    <string name="delivery_form_price_incentive">Incentive</string>
    <string name="delivery_form_done_btn">Done</string>
    <string name="price_list_screen_title">Price List</string>
    <string name="price_detail_screen_exshowroom">Ex.Showroom</string>
    <string name="price_detail_screen_insurance">Insurance</string>
    <string name="price_detail_screen_rto">RTO</string>
    <string name="price_detail_screen_extra_war">Extra-War</string>
    <string name="price_detail_screen_amc">AMC</string>
    <string name="price_detail_screen_3m_pp">3M-PP</string>
    <string name="price_detail_screen_acc">ACC</string>
    <string name="price_detail_screen_total">Total</string>
    <string name="price_detail_screen_incentive_base">Inventive Amount:</string>
    <string name="price_detail_screen_incentive_exshowroom">Incentive Ex-Showroom:</string>
    <string name="price_detail_screen_incentive_insurance">Incentive Insurance:</string>
    <string name="price_detail_screen_incentive_rto">Incentive RTO:</string>
    <string name="price_detail_screen_incentive_amc">Incentive AMC:</string>
    <string name="price_detail_screen_incentive_ew">Incentive ew:</string>
    <string name="price_detail_screen_incentive_mpp">Incentive 3M:</string>
    <string name="price_detail_screen_incentive_acc">Incentive ACC:</string>
    <string name="salesperson_screen_title">Sales Persons</string>
    <string name="salespersondetail_screen_title">SalesPerson Details</string>
    <string name="salesperson_add_screen_title">Add SalesPerson</string>
    <string name="salespersondetail_screen_name">Name</string>
    <string name="salespersondetail_screen_email">Email</string>
    <string name="salespersondetail_screen_username">User Name</string>
    <string name="salespersondetail_screen_mobilenumber">Mobile Number</string>
    <string name="salespersondetail_screen_password">Password</string>
    <string name="err_msg_usernameEmpty">Please Enter User Name</string>
    <string name="err_msg_pwdEmpty">Please Enter Password</string>
    <string name="err_msg_first_name_empty">Please enter first name</string>
    <string name="err_msg_last_name_empty">Please enter last name</string>
    <string name="err_msg_mobile_number_empty">Please enter mobile number</string>
    <string name="err_msg_address_empty">Please enter address</string>
    <string name="err_msg_tahsil_empty">Please enter tahsil</string>
    <string name="err_msg_distict_empty">Please enter distict</string>
    <string name="err_msg_vehicle_type_empty">Please select vehicle type</string>
    <string name="err_msg_model_name_empty">Please enter model name</string>
    <string name="err_msg_variant_model_empty">Please enter model variant</string>
    <string name="err_msg_vehicle_color_empty">Please enter vehicle color</string>
    <string name="err_msg_inqiry_type_empty">Please select inquiry type</string>
    <string name="err_msg_customer_type_empty">Please select customer type</string>
    <string name="err_msg_purchase_type_empty">Please select purchase type</string>
    <string name="err_msg_veriant_model_empty">Please enter Variant Model</string>
    <string name="err_msg_exshowroom_empty">Please enter Ex Showroom Price</string>
    <string name="err_msg_insurance_empty">Please enter Insurance amount</string>
    <string name="err_msg_rto_empty">Please enter RTO amount</string>
    <string name="err_msg_extra_war_empty">Please enter extra_war amount</string>
    <string name="err_msg_amc_empty">Please enter AMC amount</string>
    <string name="err_msg_mpp_empty">Please enter 3M-PP amount</string>
    <string name="err_msg_acc_empty">Please enter ACC amount</string>
    <string name="err_msg_total_empty">Please enter total amount</string>
    <string name="err_msg_incentive_amount_empty">Please enter incentive base amount</string>
    <string name="err_msg_incentive_ex_showroom_empty">Please enter incentive EX showroom Percentage</string>
    <string name="err_msg_incentive_insurance_empty">Please enter incentive insurance Percentage</string>
    <string name="err_msg_incentive_rto_empty">Please enter incentive RTO Percentage</string>
</resources>