<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp">

        <EditText
            android:id="@+id/cp_edtOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldpassword_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"/>

        <EditText
            android:id="@+id/cp_edtNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpassword_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"/>

        <EditText
            android:id="@+id/cp_edtConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"/>

        <Button
            android:id="@+id/cp_btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_update"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_20dp"/>
    </LinearLayout>
</LinearLayout>